--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "depot",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "jquery-ujs": "^1.2.2"
+  }
 }
